--- a/frontend/pages/gestion_niveles.html
+++ b/frontend/pages/gestion_niveles.html
@@ -17,16 +17,45 @@
 
     <main class="container my-5">
 
-        <!-- Contenido a modificar -->
-        
-        <!-- Contenido a modificar -->
+    <!-- Formulario para registrar nivel -->
+    <h2 class="mb-4 text-center">Registrar Nivel Educativo</h2>
+    <form id="nivelForm" class="bg-white p-4 rounded shadow-sm mb-5">
+      <div class="mb-3">
+        <label for="nombre" class="form-label">Nombre del Nivel</label>
+        <input type="text" class="form-control" id="nombre" required />
+      </div>
+      <div class="mb-3">
+        <label for="descripcion" class="form-label">Descripción</label>
+        <textarea class="form-control" id="descripcion" required></textarea>
+      </div>
+      <button type="submit" class="btn-mep azul">Guardar</button>
+    </form>
 
-    </main>
+    <!-- Lista de niveles -->
+    <h2>Niveles Educativos Registrados</h2>
+    <table id="tblNiveles" class="table table-bordered table-striped table-hover table-sm">
+      <thead class="table-light">
+        <tr>
+          <th>Grados registrados</th>
+          <th>Descripciones registradas</th>
+             <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
 
-    <div id="footer"></div>
+  </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-    <script src="../js/index.js"></script>
+  <div id="footer"></div>
+
+
+  <script src="../js/niveles.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+  <script src="../js/index.js"></script>
+   <script src="../js/nivelesListar.js"></script>
+       <script src="js/api.js"></script>
+
 
 </body>
 
