--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en" data-theme="li">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Inicio | Ministerio de Educación Pública</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -18,43 +19,18 @@
     <main class="container my-5">
 
         <!-- Contenido a modificar -->
-        <div class="row row-cols-1 row-cols-md-2 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h1 class="card-title">Titulo</h1>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet accusantium atque perspiciatis illum soluta a iusto, cum animi doloribus temporibus error nobis molestias magnam quo nihil dolorem laborum deleniti quos!</p>
-                        <a href="http://www.google.com" class="btn-mep azul">Google</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h1 class="card-title">Titulo</h1>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet accusantium atque perspiciatis illum soluta a iusto, cum animi doloribus temporibus error nobis molestias magnam quo nihil dolorem laborum deleniti quos!</p>
-                        <a href="http://www.google.com" class="btn-mep dorado">Google</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h1 class="card-title">Titulo</h1>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet accusantium atque perspiciatis illum soluta a iusto, cum animi doloribus temporibus error nobis molestias magnam quo nihil dolorem laborum deleniti quos!</p>
-                        <a href="http://www.google.com" class="btn-mep azul">Google</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h1 class="card-title">Titulo</h1>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet accusantium atque perspiciatis illum soluta a iusto, cum animi doloribus temporibus error nobis molestias magnam quo nihil dolorem laborum deleniti quos!</p>
-                        <a href="http://www.google.com" class="btn-mep dorado">Google</a>
-                    </div>
-                </div>
-            </div>
+        <div>
+            <h1>Ministerio de Educación Pública</h1>
+        </div>
+
+        <div class="mep-identidad">
+            <h1>Garantizamos el derecho fundamental a una educación de calidad a los habitantes del país.</h1>
+        </div>
+
+        <div>
+            <h2>Sistema de Gestion de Recursos Escolares</h2>
+            <p>Accede a la plataforma para la gestión de recursos educativos.</p>
+            <a href="../frontend/pages/login.html" class="btn btn-mep azul">Iniciar sesión</a>
         </div>
         <!-- Contenido a modificar -->
 
@@ -62,7 +38,9 @@
 
     <div id="footer"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
     <script src="js/api.js"></script>
 
