[new] paneles de administracion
Se agregan los paneles de admin, docente y padre

--- a/frontend/pages/panel_padre.html
+++ b/frontend/pages/panel_padre.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Inicio | Ministerio de Educación Pública</title>
+    <title>Panel para Padres | Ministerio de Educación Pública</title>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
@@ -18,7 +18,21 @@
     <main class="container my-5">
 
         <!-- Contenido a modificar -->
-        
+        <h1>Panel para Padres</h1>
+        <p>Seleccione una de las opciones a continuación:</p>
+
+        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-5 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Vista de Listas</h5>
+                        <p class="card-text">Visualice las listas de útiles escolares correspondientes a sus hijos.</p>
+                        <a href="visualizacion_listas.html" class="btn btn-primary mt-auto">Ir a Listas</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Contenido a modificar -->
 
     </main>
