[cambios ultimos lista-utiles-]

--- a/frontend/pages/gestion_listas.html
+++ b/frontend/pages/gestion_listas.html
@@ -106,12 +106,17 @@
                             
                             <!-- Nivel Educativo -->
                             <div class="mb-3">
-                                <label for="nivelEducativo" class="form-label">Nivel Educativo *</label>
-                                <select class="form-select" id="nivelEducativo" required>
-                                    <option value="" selected disabled>Seleccione un nivel...</option>
-                                    <!-- Opciones se llenarán con JS -->
-                                </select>
-                            </div>
+                            <label for="nivelEducativo" class="form-label">Nivel Educativo *</label>
+                            <select class="form-select" id="nivelEducativo" required>
+                                <option value="" selected disabled>Seleccione un nivel...</option>
+                                <option value="Primer Grado">Primer Grado</option>
+                                <option value="Segundo Grado">Segundo Grado</option>
+                                <option value="Tercer Grado">Tercer Grado</option>
+                                <option value="Cuarto Grado">Cuarto Grado</option>
+                                <option value="Quinto Grado">Quinto Grado</option>
+                                <option value="Sexto Grado">Sexto Grado</option>
+                            </select>
+                        </div>
                             
                             <!-- Materiales -->
                             <div class="mb-3">
