--- a/frontend/pages/gestion_niveles.html
+++ b/frontend/pages/gestion_niveles.html
@@ -33,6 +33,7 @@
 
     <!-- Lista de niveles -->
     <h2>Niveles Educativos Registrados</h2>
+    <p>Sección para visualizar los niveles educativos registrados</p>
     <table id="tblNiveles" class="table table-bordered table-striped table-hover table-sm">
       <thead class="table-light">
         <tr>
