--- a/frontend/pages/gestion_categorias.html
+++ b/frontend/pages/gestion_categorias.html
@@ -44,7 +44,7 @@
         <h2>Lista de Categorías</h2>
         <p>Sección para visualizar, eliminar o desactivar categorías de materiales</p>
 
-        <table id="tblCategorias" class="table table-striped table-bordered table-hover table-sm w-75">
+        <table id="tblCategorias" class="table table-bordered table-striped table-hover table-sm">
             <!-- Thead: Encabezado de la tabla -->
             <thead>
                 <tr>
