Arreglo rutas login y registro

--- a/frontend/pages/registro.html
+++ b/frontend/pages/registro.html
@@ -68,7 +68,7 @@
                     mensaje.textContent = 'Usuario registrado con éxito';
                     // Opcional: Redirigir a la página de gestión de usuarios
                     setTimeout(() => {
-                        window.location.href = '/gestion_usuarios.html';
+                        window.location.href = '/frontend/pages/gestion_usuarios.html';
                     }, 2000); // Redirige después de 2 segundos
                 } else {
                     mensaje.style.color = 'red';
