--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -26,7 +26,7 @@
                 <label for="password">Contraseña:</label>
                 <input type="password" id="password" name="password" required>
                 
-                <button type="submit" class="btn-mep">Iniciar Sesión</button>
+                <button type="submit" class="btn-mep azul" style="margin-top: 0.5rem;">Iniciar Sesión</button>
             </form>
             <p id="loginMessage"></p>
             <p>¿No tienes una cuenta? Contacta al administrador.</p>
