--- a/frontend/pages/gestion_listas.html
+++ b/frontend/pages/gestion_listas.html
@@ -119,20 +119,28 @@
                         </div>
                             
                             <!-- Materiales -->
-                            <div class="mb-3">
-                                <label class="form-label">Materiales *</label>
-                                <div id="materialesContainer" class="border rounded p-3 bg-light">
-                                    <!-- Campos dinámicos se agregarán aquí -->
-                                    <div class="alert alert-info py-2 mb-0">
-                                        <i class="bi bi-info-circle"></i> Agregue al menos un material
-                                    </div>
+                                                <div class="mb-3">
+                            <label class="form-label">Selecciona materiales *</label>
+                            <div id="materialesContainer" class="border rounded p-3 bg-light">
+                                <!-- Lista de checkboxes -->
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Lápiz" id="material1">
+                                    <label class="form-check-label" for="material1">Lápiz</label>
                                 </div>
-                                <button type="button" id="btnAgregarMaterial" class="btn btn-sm btn-outline-primary mt-2">
-                                    <i class="bi bi-plus-circle"></i> Agregar Material
-                                </button>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Regla" id="material2">
+                                    <label class="form-check-label" for="material2">Regla</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Borrador" id="material3">
+                                    <label class="form-check-label" for="material3">Borrador</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Lapicero" id="material4">
+                                    <label class="form-check-label" for="material4">Lapicero</label>
+                                </div>
                             </div>
-                        </form>
-                    </div>
+                        </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                             <i class="bi bi-x-lg"></i> Cancelar
