--- a/frontend/pages/registro.html
+++ b/frontend/pages/registro.html
@@ -17,6 +17,7 @@
 
     <main class="container my-5">
         <h2>Registro de Usuarios</h2>
+        <button class="btn-mep" onclick="history.back()">Atras</button>
         <form id="registrationForm" method="POST">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
@@ -34,7 +35,7 @@
                 <option value="admin">Administrador</option>
             </select>
             
-            <button type="submit" class="btn-mep">Registrar Usuario</button>
+            <button type="submit" class="btn-mep azul">Registrar Usuario</button>
         </form>
         <p id="registrationMessage"></p>
     </main>
